# wyrcan

./: CHANGELOG.md  Cargo.toml  release-plz.toml
.github/workflows/: cd.yml  plz_release.yml
src/: main.rs
