[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = "4.4.14"
crossterm = "0.27.0"
directories = "5.0.1"
eyre = "0.6.11"
figment = { version = "0.10.13", features = ["toml"] }
ratatui = "0.25.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
todo_lib = "7.0.1"
tui-input = "0.8.0"
