[package]
name = "wyrcan-todo"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A todo manager for managing todotxt based files"

[[bin]]
name = "wyrcan"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = "4.4.14"
crossterm = "0.27.0"
directories = "5.0.1"
eyre = "0.6.11"
figment = { version = "0.10.13", features = ["toml"] }
ratatui = { version = "0.25.0", features = ["widget-calendar"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
todo_lib = "7.0.1"
time = { version = "0.3.11", optional = true, features = ["local-offset"] }
tui-input = "0.8.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
url = "2.5.0"
graph-rs-sdk = "2.0.0-beta.0"
tokio = { version = "1.35.1", features = ["full"] }
regex = "1.10.3"
